--- a/src/WebJobsDemo/Pages/Actions/Delete.cshtml
+++ b/src/WebJobsDemo/Pages/Actions/Delete.cshtml
@@ -13,27 +13,27 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Action.Name)
+            @Html.DisplayNameFor(model => model.Action.ActionName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Action.Name)
+            @Html.DisplayFor(model => model.Action.ActionName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Action.Type)
+            @Html.DisplayNameFor(model => model.Action.ActionType)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Action.Type)
+            @Html.DisplayFor(model => model.Action.ActionType)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Action.MoreJson)
+            @Html.DisplayNameFor(model => model.Action.ActionMore)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Action.MoreJson)
+            @Html.DisplayFor(model => model.Action.ActionMore)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Action.Id" />
+        <input type="hidden" asp-for="Action.ActionId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
