--- a/src/WebJobsDemo/Pages/Rules/Create.cshtml
+++ b/src/WebJobsDemo/Pages/Rules/Create.cshtml
@@ -14,15 +14,15 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Rule.Name" class="control-label"></label>
-                <input asp-for="Rule.Name" class="form-control" />
-                <span asp-validation-for="Rule.Name" class="text-danger"></span>
+                <label asp-for="Rule.RuleName" class="control-label"></label>
+                <input asp-for="Rule.RuleName" class="form-control" />
+                <span asp-validation-for="Rule.RuleName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Rule.Priority" class="control-label"></label>
-                <select asp-for="Rule.Priority" class="form-control"
-                        asp-items="@new SelectList(Enum.GetNames(typeof(UkrGuru.WebJobs.Models.Priorities)))"></select>
-                <span asp-validation-for="Rule.Priority" class="text-danger"></span>
+                <label asp-for="Rule.RulePriority" class="control-label"></label>
+                <select asp-for="Rule.RulePriority" class="form-control"
+                        asp-items="@new SelectList(Enum.GetNames(typeof(UkrGuru.WebJobs.Data.Priorities)))"></select>
+                <span asp-validation-for="Rule.RulePriority" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Rule.ActionId" class="control-label"></label>
@@ -30,9 +30,9 @@
                 <span asp-validation-for="Rule.ActionId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Rule.MoreJson" class="control-label"></label>
-                <textarea asp-for="Rule.MoreJson" class="form-control" rows="10"></textarea>
-                <span asp-validation-for="Rule.MoreJson" class="text-danger"></span>
+                <label asp-for="Rule.RuleMore" class="control-label"></label>
+                <textarea asp-for="Rule.RuleMore" class="form-control" rows="10"></textarea>
+                <span asp-validation-for="Rule.RuleMore" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
