--- a/src/WebJobsDemo/Pages/Rules/Delete.cshtml
+++ b/src/WebJobsDemo/Pages/Rules/Delete.cshtml
@@ -13,16 +13,16 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.Name)
+            @Html.DisplayNameFor(model => model.Rule.RuleName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.Name)
+            @Html.DisplayFor(model => model.Rule.RuleName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.Priority)
+            @Html.DisplayNameFor(model => model.Rule.RulePriority)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.Priority)
+            @Html.DisplayFor(model => model.Rule.RulePriority)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rule.ActionName)
@@ -31,15 +31,15 @@
             @Html.DisplayFor(model => model.Rule.ActionName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rule.MoreJson)
+            @Html.DisplayNameFor(model => model.Rule.RuleMore)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rule.MoreJson)
+            @Html.DisplayFor(model => model.Rule.RuleMore)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Rule.Id" />
+        <input type="hidden" asp-for="Rule.RuleId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
