--- a/src/WebJobsDemo/Pages/Rules/Delete.cshtml
+++ b/src/WebJobsDemo/Pages/Rules/Delete.cshtml
@@ -36,6 +36,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rule.RuleMore)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Rule.Disabled)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Rule.Disabled)
+        </dd>
     </dl>
     
     <form method="post">
