--- a/src/WebJobsDemo/Pages/Rules/Create.cshtml
+++ b/src/WebJobsDemo/Pages/Rules/Create.cshtml
@@ -35,6 +35,12 @@
                 <span asp-validation-for="Rule.RuleMore" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <div class="form-group form-check">
+                    <input asp-for="Rule.Disabled" class="form-check-input" />
+                    <label asp-for="Rule.Disabled" class="form-check-label"></label>
+                </div>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
