--- a/src/WebJobsDemo/Pages/Rules/Index.cshtml
+++ b/src/WebJobsDemo/Pages/Rules/Index.cshtml
@@ -29,6 +29,9 @@
                 @Html.DisplayNameFor(model => model.Rules[0].RuleMore)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Rules[0].Disabled)
+            </th>
+            <th>
 
             </th>
         </tr>
@@ -51,6 +54,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RuleMore)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Disabled)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.RuleId">Edit</a> |
