--- a/demos/WebJobsDemo/Pages/WebJobs/Index.cshtml
+++ b/demos/WebJobsDemo/Pages/WebJobs/Index.cshtml
@@ -19,54 +19,57 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].JobId)
+            @Html.DisplayNameFor(model => model.Jobs[0].JobId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].Created)
+            @Html.DisplayNameFor(model => model.Jobs[0].Created)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].RuleName)
+            @Html.DisplayNameFor(model => model.Jobs[0].RuleName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].Started)
+            @Html.DisplayNameFor(model => model.Jobs[0].Started)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].Finished)
+            @Html.DisplayNameFor(model => model.Jobs[0].Finished)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].JobMore)
+            @Html.DisplayNameFor(model => model.Jobs[0].JobMore)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Jobs[0].JobStatus)
+            @Html.DisplayNameFor(model => model.Jobs[0].JobStatus)
             </th>
         </tr>
     </thead>
-    <tbody>
+    @if (Model.Jobs != null && Model.Jobs.Any())
+    {
+        <tbody>
         @foreach (var item in Model.Jobs)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.JobId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Created)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RuleName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Started, "HH:mm:ss.ttt")
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Finished, "HH:mm:ss.ttt")
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.JobMore)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.JobStatus)
-            </td>
-        </tr>
+                    <tr>
+                        <td>
+                    @Html.DisplayFor(modelItem => item.JobId)
+                        </td>
+                        <td>
+                    @Html.DisplayFor(modelItem => item.Created)
+                        </td>
+                        <td>
+                    @Html.DisplayFor(modelItem => item.RuleName)
+                        </td>
+                        <td>
+                    @Html.DisplayFor(modelItem => item.Started, "HH:mm:ss.ttt")
+                        </td>
+                        <td>
+                    @Html.DisplayFor(modelItem => item.Finished, "HH:mm:ss.ttt")
+                        </td>
+                        <td>
+                    @Html.DisplayFor(modelItem => item.JobMore)
+                        </td>
+                        <td>
+                    @Html.DisplayFor(modelItem => item.JobStatus)
+                        </td>
+                    </tr>
         }
-    </tbody>
+        </tbody>
+    }
 </table>
